--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "format": "npx prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
-    "prettier": "^3.7.3"
+    "prettier": "^3.7.3",
+    "prisma": "^7.0.1"
   }
 }
