--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/KARDT89/file-uploader#readme",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.0",
     "express-ejs-layouts": "^2.5.1",
@@ -31,8 +32,6 @@
     "nodemon": "^3.1.11",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.16.3",
-    "prettier": "^3.7.3",
-    "prisma": "^7.0.1"
+    "prettier": "^3.7.3"
   }
 }
