add: prisma working

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ node_modules
 /lib/generated/prisma
 
 /lib/generated/prisma
+
+/generated/prisma
+
+/generated/prisma
+
+/generated/prisma
+
+/generated/prisma
