--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.3.1",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.11",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "prettier": "^3.7.3"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "prettier": "^3.7.3",
+    "nodemon": "^3.1.11",
     "prisma": "^7.0.1"
   }
 }
